Changed letter-spacing and fixed some math

--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@
 }
 
 .bg-container #cur-time {
-  letter-spacing: 0.05em;
+  letter-spacing: 0.07em;
   font-size: 7em;
 }
 
